Add chapter 8 pictures

--- a/willpower/chapter8.tex
+++ b/willpower/chapter8.tex
@@ -12,6 +12,11 @@
 
 Практыкую ўсьвядомленасьць у~розных формах і цяпер. Яна дае мне, не пабаюся гэтага слова, спакой і шчасьце. Толькі ўціхамірыўшы трывогу розуму, я пачынаю паўнавартасна жыць тут і цяпер~--- адэкватна рэагуючы на тое, што адбываецца, атрымліваючы задавальненьне ад таго, што побач, адчуваючы падзяку і ўдзячнасьць за магчымасьць займацца тым, што я раблю. Усьвядомленасьць дае мне сапраўдную свабоду ад чаканьняў у~будучыні, ад трывог у~мінулым, яна не чакае нічога ад мяне, а~толькі прапануе атрымаць асалоду ад сапраўднага моманту і пражыць яго ярка і ўважліва. Кожная сэкунда нашага жыцьця ўнікальная, і толькі ўвага дапамагае адчуць водар сьвежасьці жыцьця.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch8/1.pdf}
+\end{figure}
+
 \textbf{Пачаць можна прасьцей.} Для атрыманьня карысьці ад мэдытацыі ня трэба купляць фігурку Буды ці адразу зьяжджаць на працяглую віпасану. У гэтым разьдзеле мы з~вамі разьбяромся ў~базавых паняцьцях усьвядомленасьці, даведаемся яе нэўрабіялягічныя мэханізмы, вывучым, як яна ўплывае на фізычнае і псыхічнае здароўе. Таксама разьбяром асноўныя кампанэнты ўсьвядомленасьці, асвоім практычныя навыкі фармальнай і нефармальнай практыкі~--- ад усьвядомленай хадзьбы да дыхальнай мэдытацыі. Мне хочацца, каб мае словы не стваралі ў~вас ілюзію разуменьня, а~былі адно кіраўніцтвам да дзеяньня. Бо ўсьвядомленасьць~--- гэта перадусім практыка, а~ня гутарка, таму зразумець яе можна, толькі выконваючы практыкаваньні і заданьні. Доўга апісваць яе~--- гэта як чытаць пра сэкс або танцы: адно множыць памылкі. 
 
 \emph{Як добра заўважыў адзін з~практыкаў пра ўсьвядомленасьць: ``Вельмі рэкамэндую практыкаваць, але не магу сказаць, навошта''.}
@@ -33,6 +38,11 @@
 Для захаваньня псыхічнага здароўя важна ўмець хутка і лёгка пераключацца з~адной думкі на іншую, своечасова мяняць свае паводзіны. Пры хранічным стрэсе ўсьвядомленасьць зьмяншаецца і людзі становяцца кагнітыўна «цьвёрдымі». Няўменьне своечасова адпачыць, паклапаціцца пра сябе, распазнаць праблему~--- усё гэта прыводзіць да выгараньня і трывожнасьці. Людзей мардуе ня столькі сам стрэс, колькі іх кагнітыўная жорсткасьць. Практыка ўсьвядомленасьці павялічвае і вашу гнуткасьць, і адаптыўнасьць да зьменаў.
 
 \emph{У працэсе эвалюцыі мы адаптаваліся да пастаянных пераменаў дзейнасьці: цыркадныя рытмы, цыклі актыўнасьці, харчовыя вокны і шматлікае іншае. Таму так важна правільна балянсаваць паміж працаваць/адпачываць, рухацца/сядзець, есьці/пасьціцца, зарабляць/траціць, браць/аддаваць, ствараць/спажываць, быць рэактыўным/быць праактыўным, быць аднаму/сярод людзей, рабіць кароткатэрміновае/рабіць доўгатэрміновае, транжырыць/інвэставаць, крытыкаваць/падбадзёрваць, клапаціцца пра сябе/клапаціцца пра іншых.}
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch8/2.pdf}
+\end{figure}
 
 Практыка ўсьвядомленасьці дапаможа вам нашмат больш эфэктыўна спраўляцца з~нарастальнай нагрузкай, захоўваць сваю ўвагу і фокус на важных для вас рэчах і пры гэтым не забываць пра патрэбы свайго цела. Чым лепш вы трымаеце балянс, тым больш упэўнена пачуваецеся ў~новым сьвеце нарастальнай нявызначанасьці. Цікаўнасьць да сябе і цікавасьць, павага да свайго цела, думак, добрае і міласэрнае стаўленьне да сябе~--- гэта добры пачатак для практыкі ўсьвядомленасьці. Даведайцеся пра сябе лепей, надайце сабе ўвагу і стаўцеся да сябе болей сьвядома.
 
@@ -78,6 +88,11 @@
 \textbf{Уменьне накіроўваць сваю ўвагу можа радыкальна павысіць пасьпяховасьць вашых дзеяў.} Навык кіраваньня ўвагай значна ўплывае на прадуктыўнасьць, бо ён можа быць ужыты да любой задачы~--- ад уменьня даваць рады стрэсу і пераяданьню да міжасобасных адносінаў і прафэсійных задач.
 
 Уявіце сабе навык увагі ў~выглядзе павелічальнага шкла. Сонечныя прамяні падаюць раўнамерна на ўсе прадметы~--- так і нашая ўвага расьсейваецца, ня надта ўплываючы на навакольны сьвет. Але лінза можа сабраць прамяні ў~адным пункце, што прывядзе да нагрэву і зьяўленьню полымя. Так і нашая ўвага, сабраная з~дапамогай прэфрантальнай кары ў~адным пункце, прывядзе да посьпеху ў~нашай працы і прагрэсу ў~самаразьвіцьці.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch8/3.pdf}
+\end{figure}
 
 \subsection*{Нэўрабіялёгія ўсьвядомленасьці}
 
@@ -158,6 +173,11 @@
 
 \emph{У дасьледаваньнях група паддосьледных, якія рэгулярна мэдытуюць, паказвае зьніжэньне сьмяротнасьці на 23\,\%, у~тым ліку і прыкметнае памяншэньне сьмяротнасьці ад пухлінавых і сардэчна-сасудзістых захворваньняў. Мэдытоўцы больш шчасьлівыя і задаволеныя сваім шлюбам, паводле дасьледаваньняў, у~іх на 11\,\% памяншаецца ўзровень стрэсу, зьніжаецца імавернасьць рэцыдыву дэпрэсіі.}
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch8/4.pdf}
+\end{figure}
+
 Таксама мэдытацыя зьніжае ўзровень хранічнага запаленьня, вядзе й да прыгняценьня актыўнасьці запаленчага чыньніка NF-kB, дапамагае павысіць колькасьць CD4 + лімфацытаў у~ВІЧ-пацыентаў і павышае актыўнасьць тэламэразы. Уплыў мэдытацыяў на імунітэт дозазалежны, калі яны не былі штодзённымі і былі карацейшымі, чым 20 хвілінаў (у суме), то эфэкт быў слабы. \textbf{Пры вакцынацыі супраць грыпу ў~мэдытоўцаў выпрацоўваецца больш ахоўных антыцелаў у~параўнаньні з~тымі, хто не практыкуе. А чым больш антыцелаў~--- тым вышэйшы ўзровень імуннай абароны.}
 
 \subsection*{Пабочныя эфэкты ўсьвядомленасьці}
@@ -194,6 +214,11 @@
 Сёньня за дзень чалавек можа атрымаць новай інфармацыі больш, чым раней за год. Апавяшчэньні ў~смартфонах, навіны ў~сацсетках, рэкляма на вуліцы~--- гэта крадзе нашую ўвагу, прычым усё больш агрэсіўнымі спосабамі. У ход ідзе дэманстрацыя грошай, эротыка, сэкс, улада, страх, сьмерць, фуд-порна~--- усё, што тузае за нашыя прыроджаныя нітачкі ўвагі да выжываньня і размнажэньня.
 
 \textbf{Гэта вядзе літаральна да «эпідэміі безуважлівасьці», калі нашая ўвага распушчаецца сярод інфармацыйнага шуму.} Чым больш раздражняльнікаў на нас дзейнічае, тым цяжэй нам супрацьстаяць рэакцыі, і гэта спусташае нашу энэргію. Апошнім часам праблемы з~дэфіцытам увагі і гіпэрактыўнасьцю ўсё часьцей зьяўляюцца ня толькі ў~дзяцей, але і ў~дарослых. Так, за апошнія 10 гадоў колькасьць дарослых з~такімі праблемамі ўзрасла на 43\,\%. Дэфіцыт увагі выяўляецца як няўважлівасьць да дэталяў, складанасьць утрымліваць увагу падчас працы ці камунікацыі, няздольнасьць прытрымлівацца інструкцый, адцягвальнасьць, няпомнасьць, пазьбяганьне інтэлектуальна складанай працы.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch8/5.pdf}
+\end{figure}
 
 \textbf{Дык мо варта адмовіцца ад смартфонаў?} Вядома, тэлефоны ў~гэтым не вінаватыя. Калі мы ня ўмеем кіраваць сваёй увагай, то яе лёгка перахапляюць вонкавыя сыгналы, а~калі ўмеем, то самі выбіраем, куды ягенакіраваць. Калі мы не кіруем увагай, дык наш мозг~--- адно раб эмоцыяў, змушаны прыдумляць розныя гісторыі, каб растлумачыць сабе ж свае хаатычныя паводзіны і аўтаматычныя рэакцыі на вонкавыя стымулы.
 
@@ -238,6 +263,11 @@
 
 \textbf{У аўтаматычным рэжыме} мы дзейнічаем нягнутка, як робаты, можам выконваць пэўныя дзеяньні, нават не ўсьведамляючы іх. Такі аўтаматызм добры пры кіраваньні аўтамабілем або для боксу, але жыцьцё большае і разнастайнейшае, таму з~аўтаматызмам нам цяжка адаптавацца, мяняцца, пазбаўляцца ад звычак, якія адно замінаюць. Стрэсавыя рэакцыі, сьпешка, трывога, дэфіцыт рэсурсаў, жаданьне пазьбегнуць непажаданых эмоцыяў запускаюць і падсілкоўваюць аўтаматычнае рэагаваньне.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch8/6.pdf}
+\end{figure}
+
 Для нашага псыхічнага здароўя асабліва небясьпечнае аўтаматычнае рэагаваньне на думкі і эмоцыі. Тады нашыя рэакцыі ўтвараюць своеасаблівае ``пракрустава ложа'', пад якое мы падганяем навакольны сьвет, пастаянна знаходзячыся ў~параўнаньні ``жаданае-сапраўднае''~--- а~гэта часта выклікае фрустрацыю. Нават уласныя эмоцыі мы імкнёмся не прымаць, а~``вырашаць іх'', разьбірацца з~нэгатывам, напругай і стомаю. Але гэта толькі парадаксальным чынам узмацняе іх.
 
 \infobox{Мы схільныя змагацца з~тым, што лічым няправільным, бо ``ў няправільным сьвеце нельга быць шчасьлівым''.}
@@ -264,7 +294,17 @@
 
 \textbf{Усьвядомленая хадзьба.} Адчувайце, як рухаюцца і спружыняць вашы ногі, накіруйце фокус увагі ад ступняў да каленяў ці да дыханьня. Цалкам перанясіцеся ў~сапраўдны, цяперашні момант: адчуеце на скуры вецер і сонца, тэмпэратуру цела і паветра, будзьце ўважлівыя да таго, што вас атачае.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch8/8.pdf}
+\end{figure}
+
 \textbf{Усьвядомленае харчаваньне.} Зрабіце прыём ежы мэдытацыяй, адкладзіце тэлефон і не адцягвайцеся. Зьвярніце ўвагу на сваю ежу, як быццам вы бачыце яе першы раз: на пах, кансістэнцыю, вонкавы выгляд. Сфакусуйцеся на адчуваньнях і смаку, як яны мяняюцца ў~працэсе жаваньня, у~сярэдзіне і ў~канцы. Адчуйце, як рухаецца ваш язык, зубы. Адчуйце жаданьне праглынуць ежу, што суправаджае гэты працэс? Якія адчуваньні ў~жываце пасьля праглынаньня?
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch8/7.pdf}
+\end{figure}
 
 \textbf{Зрабіце ўсьвядомлена неўсьвядомленыя дзеяньні.} Паспрабуйце сьвядома завязаць матузкі, пачысьціць зубы, папазіраваць перад люстэркам. Дадайце цікавасьці ў~«нясмачныя» пэрыяды вашага жыцьця. Часьцей пытайцеся ў~сябе, ці тое вы робіце, на што сыходзіць ваш час, ці сапраўды гэта вам трэба, ці можна зараз адрэагаваць інакш?
 
@@ -294,6 +334,11 @@
 У рэжыме дзеяньня мы часта спрабуем ``перамагчы'' эмоцыі, заглушыць іх. Такое выцісканьне ў~доўгатэрміновай пэрспэктыве можа прывесьці да нездаровых наступстваў, калі мы страчваем магчымасьць правільна распазнаваць, што ж мы насамрэч адчуваем. Узьнікае алексітымія~--- калі мы ня можам распазнаць, вытлумачыць або вэрбалізаваць адчуваньні, праява і перажываньне пачуцьцяў таксама выклікаюць цяжкасьці.
 
 \textbf{Алексітымія} выяўляецца ў~няўменьні адрозьніваць эмоцыі і цялесныя адчуваньні, таму часта ў~алексітымікаў эмоцыі выяўляюцца ў~выглядзе боляў: ``Ты мне ціск падняў'', ``Мне ад цябе галава баліць''. Эмоцыі~--- гэта каталізатар для дзеяньня, менавіта дзякуючы эмоцыям мы праяўляем актыўнасьць, клапоцячыся як пра іншых, так і пра сябе. Алексітымікі маюць нізкі ўзровень самаўсьведамленьня і эмацыйнага інтэлекту, таму дрэнна разумеюць паводзіны і свае, і іншых людзей, у~выніку разьвіваецца сацыяльная дэзадаптацыя.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch8/9.pdf}
+\end{figure}
 
 \textbf{Ад 5 да 23\,\% здаровага насельніцтва маюць рысы алексітыміі, а~менавіта: праявы прыгнечаных эмоцыяў у~выглядзе боляў.}
 
@@ -329,6 +374,11 @@
 
 Душачы нэгатыўныя пачуцьці, мы душым сваю эмацыйную ўсьвядомленасьць цалкам. Уявіце сабе градку, дзе растуць і гародніна, і пустазельле. Немагчыма вырасьціць ураджай, каб побач не зьявіліся пустазельныя расьліны. Выполваючы пустазельле, мы закопваем іх побач з~гароднінай і яны служаць угнаеньнем. Так і нэгатыўныя эмоцыі ў~канчатковым выніку ідуць нам на карысьць, утвараючы тло, на якім больш прыкметнымі і прыемнымі становяцца радасьць і задавальненьне. Дык падзякуем ім за гэта.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch8/10.pdf}
+\end{figure}
+
 Разьвіцьцё эмацыйнай усьвядомленасьці дапаможа вам павысіць ваш эмацыйны інтэлект. Заўважана, што менавіта ён у~многіх выпадках вызначае посьпех у~жыцьці. Толькі пачаўшы разумець і кіраваць сваімі эмоцыямі, вы зможаце разумець і ўзьдзейнічаць на эмоцыі і іншых людзей. У сучасным сьвеце EQ (эмацыйны інтэлект) становіцца больш каштоўным, чым IQ: на тле глабальнай рабатызацыі ўменьне распазнаваць чалавечыя эмоцыі~--- найважнейшы soft skill (гнуткі навык).
 
 \subsection*{Пытаньні і заданьні}
@@ -357,6 +407,11 @@
 Прачынаючыся кожную раніцу, спытайце сябе, у~чым унікальнасьць менавіта гэтага дня і што вы можаце зрабіць, каб ён стаў яшчэ адным асаблівым днём вашага жыцьця.
 
 \emph{Паспрабуйце ўключыць фантазію, каб дадаць навізны ў~звыклыя дзеі. Адзін з~настаўнікаў будызму прапануе ўявіць, што падчас прагулкі вы ідзяце не па дарозе, а~па пялёстках жывых кветак. Уявіце гэта сабе~--- і зьвярніце ўвагу, як зьмяніліся вашыя эмоцыі, думкі і хада.}
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch8/11.pdf}
+\end{figure}
 
 \subsection*{Станьце дасьледнікам}
 
@@ -401,6 +456,11 @@
 
 \emph{Часам мэдытацыя гострыць псыхалягічныя праблемы, бо шмат што пачынае выплываць на паверхню, і чалавек становіцца вельмі раздражняльным. У такім выпадку важна прымаць і такі вынік, гэта нармальна. Але калі мэдытацыя ўвесь час выклікае багата раздражненьня і ў~практыцы ўвесь час усплываюць нявырашаныя праблемы, то варта папрацаваць з~псыхолягам, каб спачатку расчысьціць сьвядомасьць.}
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch8/12.pdf}
+\end{figure}
+
 \textbf{Дыхальная мэдытацыя}~--- гэта базавая тэхніка для практыкі ўсьвядомленасьці. Дыханьне ўнікальнае тым, што яно спантаннае і аўтаномнае, але мы можам браць яго пад кантроль. Дыханьне~--- гэта індыкатар ўзроўню стрэсу, перамыкач розных станаў. Сядзьце, сфакусуйце сваю ўвагу на дыханьні. Зрабіце пяць расслабляльных доўгіх удыхаў-выдыхаў, перастаньце кантраляваць дыханьне і пачніце за ім назіраць. У працэсе вы можаце факусаваць сваё дыханьне на розных частках, адзначайце адчуваньні пры ўдыху і выдыху ў~вобласьці ноздраў, грудзей, жываце, іншых частках цела. Звярніце ўвагу, як мяняюцца адчуваньні ў~целе на ўдыху і на выдыху, зьвярніце ўвагу на паўзы, якія разьдзяляюць ўдых і выдых.
 
 Калі падчас мэдытацыі выплываюць непрыемныя думкі і эмоцыі, унутраныя камэнтары, то проста адзначайце, што адцягнуліся на іх, і вяртайце сваю ўвагу назад да дыханьня. Можаце пахваліць сябе, што хутка іх заўважылі, але ня варта лаяць сябе за гэта: адцягненьне і вяртаньне ўвагі~--- гэта неад'емныя часткі мэдытацыі. У канцы мэдытацыі хай увага ахопіць усё ваша цела адразу: уявіце, як вы ўдыхаеце і выдыхаеце ўсім целам адначасова. Утрыманьне ўвагі на дыханьні і зьяўляецца галоўнай мэтай мэдытацыі.
@@ -427,6 +487,11 @@
 \textbf{Усьвядомленасьць вучыць заўважаць думкі} і ня быць захопленымі іх патокам, дапамагае зразумець, што ня мы генэруем нашыя думкі па жаданьні, што шлейфы думак~--- гэта адлюстраваньне і сума мноства нэўронных сетак. Мэтай такога ўнутранага дыялёгу зьяўляецца фармаваньне кансэнсусу ў~якім-небудзь пытаньні, мы можам пераконваць сябе нешта зрабіць ці не зрабіць, апраўдаць рашэньне, адказаць крыўдніку. Небясьпечна, калі мы ня можам гэтага зразумець, тады нават выпадковыя думкі могуць кіраваць нашымі рэакцыямі. Мозг часта стварае неадэкватныя мадэлі паводзінаў і ілюзіі, якія значаць для нас больш, чым рэальнасьць. Кагнітыўныя памылкі вядуць да павелічэньня стрэсу і пакутаў. А спробы зьмяніць мінулае ці паўплываць на няпэўную будучыню могуць толькі ўзмацняць стрэс.
 
 \textbf{Павышэньне ўсьвядомленасьці паляпшае яснасьць мысьленьня, разбураючы ілюзіі.} Падчас практыкі ўсьвядомленасьці мы разьвіваем здольнасьць назіраць за сабой збоку, каб ня быць паглынутымі плыньню думак, вучымся ўсьведамляць свае парывы, лепей разумець эмоцыі.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch8/13.pdf}
+\end{figure}
 
 \emph{Мне падабаецца такая мэтафара. Уявіце сажалку з~чыстай вадой, у~якой відаць дно. Калі вы кінеце камень, то хвалі перашкодзяць бачыць дно. Каб ізноў атрымаыць празрыстасьць, трэба проста чакаць. А калі кідаць камяні ўвесь час, то можна вельмі моцна ўзбаламуціць ваду ў~сажалцы. Так і думкі віхруюць сумятню, парушаючы яснасьць розуму: чым больш думак мы пракручваем, тым мацней страчваем усьвядомленасьць.}
 
@@ -516,6 +581,11 @@
 
 \emph{Уявіце сабе такі экспэрымэнт. Лябараторная жывёла бачыць выбліск сьвятла, а~затым атрымлівае пачастунак. Пры гэтым навукоўцы рэгіструюць актыўнасьць дафамінавых нэўронаў вэнтральнае вобласьці покрыўкі (аддзел сярэдняга мозгу). Калі даць сыгнал і ўзнагароду першы раз, то мы ўбачым моцную дафамінавую рэакцыю пасьля ўзнагароды. Але чым часьцей будзе паўтарацца гэты досьвед, тым мацней будзе зьніжацца рэакцыя на ўзнагароду~--- толькі рэакцыя на стымул (выбліск сьвятла) будзе заставацца моцнай.}
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch8/14.pdf}
+\end{figure}
+
 \textbf{Чаму так адбываецца?} У гэтым выпадку дафамінавая сыстэма сфармавала пэўнае чаканьне. Чаканьне (Ч) цалкам супадае з~рэальнасьцю (Р), выдзяленьне дафаміну нязначнае. Напрыклад, вы выканалі працу і вам заплацілі дакладна ў~абяцаны тэрмін 100\,\% сумы. Усё добра, ніякіх асаблівых эмоцыяў. Але ўявіце, што б вы адчулі, калі б вам заплацілі 99\,\% ад абумоўленай сумы? Розумам вы разумееце, што 1\,\%, які вы недаатрымалі, знаходзіцца ў~межах статыстычнай хібнасьці і малаважны. Але якія ён выклікае эмоцыі. Гнеў! Абурэньне! Настрой сапсаваны!
 
 Дафамінавая сыстэма адразу вызначае, што рэальнасьць горшая за чаканьне, Ч<P, і гэта прыводзіць да падзеньня дафаміну. У экспэрымэнце, калі даць сыгнал і ня даць узнагароду, узровень дафаміну прыкметна падае. Зьвярніце ўвагу, што 1\,\% несупадзеньня рэальнасьці і чаканьняў~--- гэта велічыня ў~межах хібнасьці. І розумам мы можам разумець, што ня варта так гостра рэагаваць на сытуацыю. Тым ня менш, калі мы атрымалі 99\,\% замест чаканых 100\,\%, мы засмучаныя.
@@ -573,11 +643,21 @@
 
 Адпушчэньне~--- гэта калі вы пакідаеце ў~мінулым думкі, рэчы, сытуацыі і людзей і рухаецеся далей, выдыхаеце іх бяз злосьці. Адпушчэньне~--- гэта калі вы вызваляеце месца для лепшага ў~вашым жыцьці. Адпушчэньне мяркуе мастацтва не прывязвацца і пільнаваць свае межы, адсякаць і адштурхваць непажаданае. Важна зразумець, што адпушчэньне ня значыць абыякавасьць або безадказнасьць, а~значыць усьвядомлены высілак і здабыцьцё страчанай раўнавагі.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch8/15.pdf}
+\end{figure}
+
 \emph{Складзіце сьпіс таго ў~сваім жыцьці, з~чым бы вы хацелі разьвітацца. Падумайце аб тым, што вы трымаеце ў~сабе, але хочаце адпусьціць, уявіце цану, якую плаціце за гэтае ўтрыманьне і якія альтэрнатывы губляеце. Што гэта? Гэта жаданьні, якія прымушаюць вас адно пакутаваць, гэта ідэі, якія не працуюць, людзі, якія вас не кахаюць? Напішыце, якія станоўчыя альтэрнатывы маглі б быць на месцы тых рэчаў, якія вы адпускаеце. ``Пахавайце'' гэты сьпіс~--- запячатайце яго і спаліце або закапайце.}
 
 \subsection*{Мінімалізм}
 
 Практыка мінімалізму~--- гэта ня голыя сьцены бяз рэчаў, а~разьвіцьцё густу і выбіральнасьці, калі мы расчышчаем у~сваім жыцьці месца для важнага, скідаем ``старую скуру'' навязаных пакупак і ўяўленьняў. Пачніце з~матэрыяльных рэчаў і ўборкі, пакідаючы ў~доме толькі тыя рэчы, якія цешаць, і пазбаўляючыся ад усяго астатняга. Пазбаўляцца таксама варта сьвядома, па магчымасьці прадаючы ці раздаючы рэчы, сартуючы сьмецьце. Абмяжуйце лішнія пакупкі, пакідаючы толькі самае патрэбнае і якаснае, бярыце нешта ў~арэнду, пазьбягайце захламленьня.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch8/16.pdf}
+\end{figure}
 
 \subsection*{Чыстка нематэрыяльнага}
 
@@ -645,6 +725,11 @@
 Аднак у~мозгу не існуе асобнага цэнтра, дзе знаходзілася б эга. Лічыцца, што дэфолтная сетка мозгу, якая актыўная, калі мы нічога ня робім, занята аналізам усяго таго, што адбываецца, і рэфлексіяй з~нагоды падзей і эмоцыяў. Яна стварае цэласную гісторыю, зьвязваючы розныя факты ў~адно пасьлядоўнае апавяданьне, канструюючы мінулае і разважаючы пра будучыню. Мы факусуемся на тым, што думаем пра падзеі і людзей, разважаем, а~што людзі думаюць пра нас, вырашаем, што правільна, а~што няправільна. Залішняя актыўнасьць дэфолтнай сеткі вядзе да турботаў, зьніжэньня настрою, а~канцэнтрацыя ўвагі, наадварот, зьніжае зацыкленасьць на сабе і павышае ўзровень шчасьця.
 
 Мы адчуваем сябе з~дапамогай самасьвядомасьці. Як жа выглядае сьвядомасьць? Уявіце навальнічную хмару, у~ёй мільярды кропляў са сваім зарадам, якія пэрыядычна акумулююцца і адбываецца разрад: грымоты і маланка. Новыя кроплі кандэнсуюцца, іншыя пакідаюць воблака з~дажджом, але актыўнасьць хмары захоўваецца. Так і мільярды расьсеяных нэўронаў структуруюцца, разраджаюцца, паміж імі ўзьнікаюць найскладанейшыя патэрны ўзаемнай актыўнасьці~--- і ўзьнікае сьвядомасьць. Гэта такі глябальны нэўронавы карэлят, «дынамічнае ядро», якое само сябе сынхранізуе. У ім няма фізычных межаў, няма лякацыі ў~мозгу, але ёсьць узгодненасьць.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch8/17.pdf}
+\end{figure}
 
 \emph{Што ж утрымлівае і зводзіць разам размаітыя актыўнасьці нэўронаў у~розных аддзелах мозгу? Гэта сынхронныя ваганьні нэўронных разрадаў, вядомыя як гама-рытмы мозгу (25--100 герц). Іх усплёск назіраецца пры рашэньні задач, якія патрабуюць максімальнай канцэнтрацыі ўвагі, пры высокім узроўні сьвядомага ўспрыманьня, шэраг аўтараў упэўнены, што гама-рытм адлюстроўвае працу сьвядомасьці. Цікава, што мэдытацыя павялічвае актыўнасьць гама-рытму і, мабыць, зьмяняе глыбінную структуру сьвядомасьці. Мадулююць актыўнасьць гама-рытму ў~першую чаргу дафамінавыя нэўроны.}
 
@@ -803,3 +888,10 @@
 2. Ці думаеце вы часам пра сваю сьмерць?
 
 3. Як вы рэагуеце на напамін пра сьмерць?
+
+\clearpage
+\thispagestyle{empty}
+\begin{figure}[htb!]
+  \vspace*{-0.15in}
+  \includegraphics[width=0.95\textwidth]{willpower/ch8/full.pdf}  
+\end{figure}
